--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
     
     <!-- Custom CSS -->
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <!-- Loading Animation -->
@@ -38,13 +38,6 @@
             <div class="loader-text">
                 <span class="loading-letter">L</span>
                 <span class="loading-letter">O</span>
-                <span class="loading-letter">A</span>
-                <span class="loading-letter">D</span>
-                <span class="loading-letter">I</span>
-                <span class="loading-letter">N</span>
-                <span class="loading-letter">G</span>
-                <span class="loading-letter">" "</span>
-                <span class="loading-letter">A</span>
                 <span class="loading-letter">A</span>
                 <span class="loading-letter">D</span>
                 <span class="loading-letter">I</span>
@@ -674,6 +667,6 @@
     </footer>
 
     <!-- Custom JavaScript -->
-    <script src="js/main.js"></script>
+    <script src="main.js"></script>
 </body>
 </html>
