--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -94,7 +95,7 @@
                     <span class="typing-text"></span>
                 </h2>
                 <p class="hero-description" data-aos="fade-up" data-aos-delay="600">
-                    Passion for building creative & futuristic applications
+                    Passion for building creative & futuristic websites
                 </p>
                 
                 <div class="hero-buttons" data-aos="fade-up" data-aos-delay="800">
@@ -598,13 +599,13 @@
                     <a href="#" class="social-link" title="LinkedIn">
                         <i class="fab fa-linkedin"></i>
                     </a>
-                    <a href="#" class="social-link" title="GitHub">
+                    <a href="https://github.com/abhishek12-kashyap" class="social-link" title="GitHub">
                         <i class="fab fa-github"></i>
                     </a>
                     <a href="#" class="social-link" title="Twitter">
                         <i class="fab fa-twitter"></i>
                     </a>
-                    <a href="#" class="social-link" title="Instagram">
+                    <a href="https://www.instagram.com/abhishek__kashyap_._._?igsh=MWY3ZW4zejUyaWlyaw==" class="social-link" title="Instagram">
                         <i class="fab fa-instagram"></i>
                     </a>
                 </div>
