--- a/index.html
+++ b/index.html
@@ -596,14 +596,14 @@
                 </div>
                 
                 <div class="social-links">
-                    <a href="#" class="social-link" title="LinkedIn">
+                    <a href="https://www.linkedin.com/me?trk=p_mwlite_feed-secondary_nav" class="social-link" title="LinkedIn">
                         <i class="fab fa-linkedin"></i>
                     </a>
                     <a href="https://github.com/abhishek12-kashyap" class="social-link" title="GitHub">
                         <i class="fab fa-github"></i>
                     </a>
-                    <a href="#" class="social-link" title="Twitter">
-                        <i class="fab fa-twitter"></i>
+                    <a href="https://x.com/AbhiKumar570478" class="social-link" title="x">
+                        <i class="fab fa-x"></i>
                     </a>
                     <a href="https://www.instagram.com/abhishek__kashyap_._._?igsh=MWY3ZW4zejUyaWlyaw==" class="social-link" title="Instagram">
                         <i class="fab fa-instagram"></i>
