--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -148,7 +149,7 @@
                     <div class="image-wrapper">
                         <div class="glowing-border"></div>
                         <div class="profile-placeholder">
-                            <i class="fas fa-user-astronaut"></i>
+                            <img src="image/abhishek-photo.jpg">
                         </div>
                     </div>
                 </div>
