--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                     <div class="image-wrapper">
                         <div class="glowing-border"></div>
                         <div class="profile-placeholder">
-                            <img src="image/abhishek-photo.jpg">
+                            <img src="image/abhishek-photo.png">
                         </div>
                     </div>
                 </div>
